--- a/manifest.json
+++ b/manifest.json
@@ -2,16 +2,16 @@
   "manifest_version": 2,
 
   "name": "Test",
-  "description": "This extension shows the text that you highlighted in a text bubble",
+  "description": "This extension is part of a language learning tool",
   "version": "1.0",
   "browser_action": {
     "default_icon": "erik_headshot.png"
   },
   "content_scripts":[
     {
-      "matches": ["http://*/", "https://*/", "*://*/", "<all_urls>"],
+      "matches": ["http://www3.nhk.or.jp/*"],
       "css": ["contentScript.css"],
-      "js": ["jquery.js", "jquery.foggy.min.js","contentScript.js"]
+      "js": ["jquery.js", "jquery.foggy.min.js", "contentScript.js"]
     }
   ],
   "permissions": [
