--- a/manifest.json
+++ b/manifest.json
@@ -14,7 +14,7 @@
     {
       "matches": ["<all_urls>"], 
       "css": ["contentScript.css"],
-      "js": ["jquery.js", "jquery.foggy.min.js", "contentScript.js"]
+      "js": ["jquery.js", "contentScript.js"]
     }
   ],
   "permissions": [
