--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
-  "manifest_version": 1,
+  "manifest_version": 2,
 
   "name": "Language Learning Tool Chrome Extension",
   "description": "This extension is part of a language learning tool for a project that Professor Erik Andersen and Ph.D. candidate Shuhan Wang is working on.",
   "version": "1.0",
   "browser_action": {
-    "default_icon": "erik_headshot.png"
+    "default_icon": "images/erik_headshot.png"
   },
   "icons": { 
     "16": "images/eland_16.jpg",
