--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
 
   "name": "Language Learning Tool Chrome Extension",
   "description": "Extension for a project Prof. Erik Andersen and Ph.D. candidate Shuhan Wang.",
-  "version": "1.11",
+  "version": "1.12",
   "browser_action": {
     "default_icon": "images/erik_headshot.png"
   },
@@ -24,6 +24,7 @@
   ],
   "permissions": [
     "activeTab",
+    "storage",
     "*://*/",
     "http://*/",
     "https://*/",
