shuhan: package and commmunicate with final_page

--- a/manifest.json
+++ b/manifest.json
@@ -30,5 +30,6 @@
     "http://*/",
     "https://*/",
     "https://ajax.googleapis.com/"
-  ]
+  ],
+  "web_accessible_resources": [ "final_page.htm" ]
 }
