--- a/manifest.json
+++ b/manifest.json
@@ -3,14 +3,14 @@
 
   "name": "Language Learning Tool Chrome Extension",
   "description": "Extension for a project Prof. Erik Andersen and Ph.D. candidate Shuhan Wang.",
-  "version": "1.138",
+  "version": "1.139",
   "browser_action": {
-    "default_icon": "images/erik_headshot.png"
+    "default_icon": "images/icon_16.png"
   },
   "icons": { 
-    "16": "images/eland_16.jpg",
-    "48": "images/eland_48.jpg",
-    "128": "images/eland_128.jpg" 
+    "16": "images/icon_16.png",
+    "48": "images/icon_48.png",
+    "128": "images/icon_128.png" 
   },
   "background": {
     "scripts": ["background.js"] 
