--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 2,
 
-  "name": "Language Learning Tool Chrome Extension",
-  "description": "Extension for a project Prof. Erik Andersen and Ph.D. candidate Shuhan Wang.",
+  "name": "Japanese Learning Chrome Extension",
+  "description": "A Japanese Learning chrome extension that recommends appropriate reading texts for you",
   "version": "1.139",
   "browser_action": {
     "default_icon": "images/icon_16.png"
